Add human tool [WIP]
