# api-service/playground/swagger.json
@@ -34,6 +34,18 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"ToolsHumanResponse": {
+				"properties": {
+					"response": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"response"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"DeploymentResponse": {
 				"properties": {
 					"url": {
@@ -298,6 +310,50 @@
 						}
 					}
 				}
+			}
+		},
+		"/tools": {
+			"get": {
+				"operationId": "WaitForHumanResponse",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ToolsHumanResponse"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "runID",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "projectID",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "routeID",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/deployments/{projectID}": {
